--- a/package.json
+++ b/package.json
@@ -5,34 +5,31 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@axa-fr/react-oidc": "^5.13.5",
+    "@babel/eslint-parser": "^7.19.1",
     "@emotion/react": "latest",
     "@emotion/styled": "v11.6.0",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "latest",
+    "@mui/system": "^5.10.15",
+    "@mui/utils": "^5.10.15",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "apollo-link-ws": "^1.0.20",
     "axios": "^0.26.1",
     "colord": "^2.9.2",
-    "copyfiles": "^2.4.1",
     "cra-envs": "^1.2.6",
+    "eslint-config-react-app": "^7.0.1",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
-    "i18next-http-backend": "^1.4.0",
-    "isurl": "^4.0.2",
     "jwt-decode": "^3.1.2",
-    "keycloak-js": "^17.0.0",
     "loglevel": "^1.8.0",
     "mui-file-dropzone": "^4.0.1",
     "notistack": "^2.0.5",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.7",
-    "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "subscriptions-transport-ws": "^0.9.19",
@@ -68,14 +65,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.17.12",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.6.2"
   }
