--- a/configuration-api/package.json
+++ b/configuration-api/package.json
@@ -17,40 +17,26 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "@graphql-tools/utils": "7.2.3",
-    "@types/express-session": "1.17.3",
-    "@types/graphql": "14.2.3",
-    "@types/node": "10.17.50",
-    "@types/sinon": "9.0.10",
-    "apollo-server-express": "3.1.2",
-    "cors": "2.8.5",
-    "coveralls": "3.1.0",
-    "dotenv": "^16.0.0",
-    "express": "4.17.1",
-    "express-session": "1.17.1",
+    "apollo-server-errors": "^3.3.1",
+    "apollo-server-express": "^3.11.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
     "graphql": "^16.6.0",
-    "graphql-subscriptions": "1.1.0",
-    "graphql-upload-minimal": "^1.5.3",
-    "gridfs-stream": "^1.1.1",
     "jwks-rsa": "^2.1.4",
     "logops": "^2.1.2",
     "mongoose": "^6.2.11",
-    "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "sinon": "9.2.2",
-    "streamifier": "^0.1.1",
-    "subscriptions-transport-ws": "0.9.18",
     "uid": "^2.0.1"
   },
   "devDependencies": {
     "chai": "^4.3.6",
+    "coveralls": "^3.1.1",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "graphql": "^16.6.0",
-    "mocha": "^10.0.0",
+    "mocha": "^10.1.0",
     "prettier": "^2.6.2",
     "supertest": "^6.2.4"
   }
