--- a/configuration-api/dockerfile
+++ b/configuration-api/dockerfile
@@ -1,10 +1,10 @@
-FROM node:14-alpine AS nodeBuild
+FROM node:16-alpine AS nodeBuild
 LABEL version="0.1"
 LABEL description="Graphql configs for the webapp"
 LABEL maintainer = ["valerio.cantore@martel-innovate.com"]
 WORKDIR /configuration-api
 COPY ["package.json", "package-lock.json", "./"]
-RUN npm install --force
+RUN npm install
 COPY . .
 EXPOSE 4000
 CMD ["node", "main/advancedAuth.js"]
